# chip-8-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  backends.txt  controls.txt  debug-repl.c  frontend.c  todo.txt
frontends/: debug-repl.c  sdl.c
include/: call.h  chip8.h  cpu.h  delta.h  font.h  input.h  instructions.h  memory.h  opcodes.h  registers.h  rom.h  save-state.h  screen.h  shared-internal.h  shared.h  sound.h
src/: call.c  cpu.c  font.c  frontend.c  input.c  memory.c  opcodes.c  registers.c  rom.c  save-state.c  screen.c  sound.c
src/include/: instructions.h  opcodes.h  shared-internal.h
src/instructions/: arithmetic.c  assignment.c  bitwise.c  branches.c  display.c  input.c  jumps.c  misc.c  timers.c
